--- a/Portfolio projects/omi game.html
+++ b/Portfolio projects/omi game.html
@@ -62,7 +62,7 @@
           <li><a href="../#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="../#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
           <li><a href="../#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="../#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Blogs</span></a></li>
           <li><a href="../#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -79,7 +79,7 @@
           <h2>Omi game</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
-            <li>Portfoio Details</li>
+            <li>Portfolio Details</li>
           </ol>
         </div>
 
@@ -119,8 +119,7 @@
               <ul>
                 <li><strong>Category</strong>: Desktop development</li>
                 <li><strong>Technologies</strong>: <h5>Python</h5> <h5>Tkinter</h5></li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Project URL</strong>: <a href="#">https://github.com/Dilshan1997/Omi</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
