--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
               <img src="assets/img/portfolio/Docket/5.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/Docket/5.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
-                <a href="./Portfolio projects/docket.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./Portfolio projects/Docket.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
