--- a/index.html
+++ b/index.html
@@ -590,7 +590,8 @@
         </div>
 
       </div>
-    </section>End Testimonials Section >
+    </section>
+    End Testimonials Section >
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
@@ -598,12 +599,11 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>If you want to help or if you want do some project from me plz conect me</p>
         </div>
 
         <div class="row" data-aos="fade-in">
 
-          <div class="col-lg-5 d-flex align-items-stretch">
+          <div class="col-lg-12 d-flex align-items-stretch">
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -622,40 +622,15 @@
                 <h4>Call:</h4>
                 <p>+94 766661780</p>
               </div>
-
-              <iframe src="https://www.google.com/maps/@7.0271966,79.9215053,18.66z" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
-
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="form-group col-md-6">
-                  <label for="name">Your Name</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
-                </div>
-                <div class="form-group col-md-6">
-                  <label for="name">Your Email</label>
-                  <input type="email" class="form-control" name="email" id="email" required>
-                </div>
-              </div>
-              <div class="form-group">
-                <label for="name">Subject</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
-              </div>
-              <div class="form-group">
-                <label for="name">Message</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+          <div class="col-lg-12 mt-5 ">
+            <div class="text-center align-baseline">
+               <h4><strong>Thank you visiting my portfolio!</strong></h4>
+            </div>
           </div>
+         
 
         </div>
 
@@ -672,10 +647,7 @@
         &copy; Copyright <strong><span>tdmperera</span></strong>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+   
 
       </div>
     </div>
