--- a/Portfolio projects/Student management system.html
+++ b/Portfolio projects/Student management system.html
@@ -121,7 +121,7 @@
               <ul>
                 <li><strong>Category</strong>: Web development</li>
                 <li><strong>Technologies</strong>: <h5>Bootstrap</h5> <h5>Firebase</h5><h5>APIs</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/Dilshan1997/File_organizer_ft_python</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Dilshan1997/File_organizer_ft_python">https://github.com/Dilshan1997/File_organizer_ft_python</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
