--- a/Portfolio projects/ft-inv.html
+++ b/Portfolio projects/ft-inv.html
@@ -129,7 +129,7 @@
               <ul>
                 <li><strong>Category</strong>: Web development</li>
                 <li><strong>Technologies</strong>: <h5>Bootstrap</h5> <h5>Laravel</h5><h5>Mysql</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">http://ftinv.herokuapp.com/</a></li>
+                <li><strong>Project URL</strong>: <a href="http://ftinv.herokuapp.com/">http://ftinv.herokuapp.com/</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
