--- a/Portfolio projects/omi game.html
+++ b/Portfolio projects/omi game.html
@@ -121,7 +121,7 @@
               <ul>
                 <li><strong>Category</strong>: Desktop development</li>
                 <li><strong>Technologies</strong>: <h5>Python</h5> <h5>Tkinter</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/Dilshan1997/Omi</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Dilshan1997/Omi">https://github.com/Dilshan1997/Omi</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
