--- a/Portfolio projects/Docket.html
+++ b/Portfolio projects/Docket.html
@@ -130,7 +130,7 @@
               <ul>
                 <li><strong>Category</strong>: Web development(Group work)</li>
                 <li><strong>Technologies</strong>: <h5>Bootstrap</h5> <h5>Laravel</h5> <h5>Github</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/0sf/docket</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/0sf/docket">https://github.com/0sf/docket</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
