--- a/Portfolio projects/File_organizer.html
+++ b/Portfolio projects/File_organizer.html
@@ -123,7 +123,7 @@
               <ul>
                 <li><strong>Category</strong>: Desktop development</li>
                 <li><strong>Technologies</strong>: <h5>Python</h5> <h5>tkinter</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/Dilshan1997/File_organizer_ft_python</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Dilshan1997/File_organizer_ft_python">https://github.com/Dilshan1997/File_organizer_ft_python</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
