--- a/Portfolio projects/chrome_ex.html
+++ b/Portfolio projects/chrome_ex.html
@@ -121,7 +121,7 @@
               <ul>
                 <li><strong>Category</strong>: Web development</li>
                 <li><strong>Technologies</strong>: <h5>Bootstrap</h5> <h5>APIs</h5> <h5>JSON</h5></li>
-                <li><strong>Project URL</strong>: <a href="#">https://github.com/Dilshan1997/covid-updater-chrome-extension</a></li>
+                <li><strong>Project URL</strong>: <a href="https://github.com/Dilshan1997/covid-updater-chrome-extension">https://github.com/Dilshan1997/covid-updater-chrome-extension</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
