--- a/index.html
+++ b/index.html
@@ -506,8 +506,9 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>
 
+   <!-- End Services Section -->
     <!-- ======= Testimonials Section ======= -->
     <!-- <section id="testimonials" class="testimonials section-bg">
       <div class="container">
@@ -532,7 +533,6 @@
                 <h4>Ceo &amp; Founder</h4>
               </div>
             </div>
-
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="100">
                 <p>
@@ -545,7 +545,6 @@
                 <h4>Designer</h4>
               </div>
             </div>
-
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="200">
                 <p>
@@ -558,7 +557,6 @@
                 <h4>Store Owner</h4>
               </div>
             </div>
-
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="300">
                 <p>
@@ -571,7 +569,6 @@
                 <h4>Freelancer</h4>
               </div>
             </div>
-
             <div class="swiper-slide">
               <div class="testimonial-item" data-aos="fade-up" data-aos-delay="400">
                 <p>
@@ -584,7 +581,6 @@
                 <h4>Entrepreneur</h4>
               </div>
             </div>
-
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -604,6 +600,7 @@
         <div class="row" data-aos="fade-in">
 
           <div class="col-lg-12 d-flex align-items-stretch">
+
             <div class="info">
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
@@ -620,20 +617,18 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+94 766661780</p>
+                <p>+94 76 666 1780</p>
               </div>
             </div>
-
           </div>
-          <div class="col-lg-12 mt-5 ">
+
+          <div class="col-lg-12 mt-5">
             <div class="text-center align-baseline">
                <h4><strong>Thank you visiting my portfolio!</strong></h4>
             </div>
           </div>
-         
 
         </div>
-
       </div>
     </section>
 <!-- End #main -->
@@ -647,8 +642,6 @@
         &copy; Copyright <strong><span>tdmperera</span></strong>
       </div>
       <div class="credits">
-   
-
       </div>
     </div>
   </footer><!-- End  Footer -->
