--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
               <img src="assets/img/portfolio/File_organizer/2.PNG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/File_organizer/2.PNG" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="./Portfolio projects/file_organizer.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="./Portfolio projects/File_organizer.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
