--- a/Portfolio projects/Docket.html
+++ b/Portfolio projects/Docket.html
@@ -136,8 +136,8 @@
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-                This project is the our university 2nd year 2 semester web project which i create with my team. Basically This kind of LMS but not given that kind of core features. Specific thing is roll wise this
-                we categorize two parts in this project and we gave difference access priviladges and user interfaces.
+                This project is the our university 2nd year 2 semester web project which I create with my team. This is kind of LMS but not given that kind of core features. Specific thing is roll wise
+                we categorize this project and we gave difference access privileges and user interfaces.
               </p>
             </div>
           </div>
