--- a/Portfolio projects/File_organizer.html
+++ b/Portfolio projects/File_organizer.html
@@ -129,7 +129,7 @@
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-               This is my first my desktop application. Actually This application can use to move to files which we are given, move to folders. There are quick option and also also we can customize and we can move file as we like.
+               This is my first my desktop application. Actually This application can use to move to files according to it's extension type and save them in particular folder. There are quick option and also also we can customize and we can move file as we like.
               </p>
             </div>
           </div>
