--- a/Portfolio projects/chrome_ex.html
+++ b/Portfolio projects/chrome_ex.html
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-            Purpose of this chrome extension development is provide update information about covid-19 current situation. Globally and also the Local covid-19 Confirmation, Recovery and Deads are provide this application. I use covid-19 API for develop this extension. Some analytical part I also add for it and Special thing is extension automatically identify user country through IP address and provide local information.
+            Purpose of this chrome extension development is provide updated information about covid-19 current situation. Globally and also the Local covid-19 Confirmation, Recovery and Deads. I use covid-19 API for develop this extension. Some analytical part I also add for it and Special thing is extension automatically identify user country through IP address and provide local information.
               </p>
             </div>
           </div>
