--- a/Portfolio projects/omi game.html
+++ b/Portfolio projects/omi game.html
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-                This is a card game and many algorithms I execute to deploy this project because some advanced moments are in this game and I using tkinter to develop the UI of the game.
+                This is a card game and many simple algorithms, I development to deploy this project because some advanced moments are in this game and I using tkinter to develop the UI of the game.
               </p>
             </div>
           </div>
