--- a/Portfolio projects/student_data_storage.html
+++ b/Portfolio projects/student_data_storage.html
@@ -127,7 +127,7 @@
             <div class="portfolio-description">
               <h2>Details</h2>
               <p>
-              This very simple desktop application it can storing the student data and user can edit delete that if they want.
+              This very simple desktop application it can storing the student data and user can edit delete that if they like.
               </p>
             </div>
           </div>
