--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Dilshan Madhuranga</h1>
-      <p>I'm <span class="typed" data-typed-items="Designer,Developer, Blogger"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Developer, Designer, Blogger"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -99,7 +99,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Python programmer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Bugs are predictable but the Solution always there.
+              Bugs are every where but the Solution always there.
             </p>
             <div class="row mt-5">
               <div class="col-lg-6">
@@ -499,7 +499,15 @@
             <a href="https://t-dilshanmperera.medium.com/edge-networking-be1aee54c162" target="blank">
             <div class="icon"><i class="bi bi-bar-chart"></i></div>
             <h4 class="title"><a href="">Edge Networking</a></h4>
-            <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+            <p class="description">People always try to build new concepts for their advance. Edge networking the kind of born of technology. Cloud base networking limitations are preventing by this edge networking concept.</p>
+          </a>
+          </div>
+
+          <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
+            <a href="https://t-dilshanmperera.medium.com/edge-networking-be1aee54c162" target="blank">
+            <div class="icon"><i class="bi bi-arrow-bar-up"></i></div>
+            <h4 class="title"><a href="">Agile is mindeset</a></h4>
+            <p class="description">If someone asked what is agile? How we can explain it. In general, we said this kind of processor kind of methodology or something. but in this article, I discuss what is agile in a proper manner. And also discuss the development management briefly and history of the agile. Agile is a larger concept so only agile values we discuss deeply here.</p>
           </a>
           </div>
         
