--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <a href="https://twitter.com/DilshanMadhura3" target="blank" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/dilshan.madhuranga1/" target="blank" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://github.com/Dilshan1997" target="blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="tackoverflow.com/users/16915611/dilshan-madhuranga" target="blank" class="stack-overflow"><i class="bx bxl-stack-overflow"></i></a>
+          <a href="https://stackoverflow.com/users/16915611/dilshan-madhuranga" target="blank" class="stack-overflow"><i class="bx bxl-stack-overflow"></i></a>
           <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="https://www.linkedin.com/in/dilshan-madhuranga-50b807182/" target="blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
