--- a/index.html
+++ b/index.html
@@ -378,6 +378,18 @@
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <h5 class=" text-center">Vtrust Voting System</h5>
+            <h6 class=" text-center">Blockchain empowred web project</h6>
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/VTrust_voting_system/front-1.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/VTrust_voting_system/front-1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="./Portfolio projects/VTrust.html" title="More Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <h5 class=" text-center">Inventory Management System</h5>
             <h6 class=" text-center">Web Project (Group)</h6>
             <div class="portfolio-wrap">
