--- a/index.html
+++ b/index.html
@@ -331,13 +331,13 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Laboratory Technician - HAYCARB PLC</h4>
               <h5>2018 March - 2018 October</h5>
         
               <p>Hayleys group company. </p>
               
-            </div>
+            </div> -->
             <div class="resume-item">
               <h4>Software Engineering 6 month Internship - Baryon Lanka (PVT)LTD </h4>
               <h5>2022 August - 2023 January</h5>
@@ -354,6 +354,10 @@
               <h3 class="resume-title">Volunteer experience</h3>
             <div class="resume-item">
               <ul>
+                  <li>Chair Person of
+                  IEEE Student Branch -susl <br>
+                  <h5>2022-2023  <h5>
+                  </li>
                 <li>Content Coordinator of
                   IEEE Student Branch -susl <br>
                   <h5>2021-2022  <h5>
