--- a/Portfolio projects/VTrust.html
+++ b/Portfolio projects/VTrust.html
@@ -78,7 +78,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Student Data Recorder - Desktop Application</h2>
+          <h2>VTrust Voting System</h2>
           <ol>
             <li><a href="../index.html">Home</a></li>
             <li>Portfolio Details</li>
