--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               
             </div>
             <div class="resume-item">
-              <h4>Assocaite Software Engineer - Baryon Lanka (PVT)LTD </h4>
+              <h4>Associate Software Engineer - Baryon Lanka (PVT)LTD </h4>
               <h5>2023 February - Present</h5>
               <!-- <p>Swidden origin company </p> -->
               
@@ -354,12 +354,12 @@
               <h3 class="resume-title">Volunteer experience</h3>
             <div class="resume-item">
               <ul>
-                  <li>Chair Person of
-                  IEEE Student Branch -susl <br>
+                  <li>Chairperson of
+                  IEEE Student Branch -SUSL <br>
                   <h5>2022-2023  <h5>
                   </li>
                 <li>Content Coordinator of
-                  IEEE Student Branch -susl <br>
+                  IEEE Student Branch -SUSL <br>
                   <h5>2021-2022  <h5>
                   </li>
                 <li>Member<br>
@@ -514,7 +514,7 @@
 
         <div class="section-title">
           <h2>Blogs</h2>
-          <p>I usually like to express my opinions via blogs. I am not famous blogge but It is helpfult to idintify the more technology and related enviroment things. Medium is my blog post platform</p>
+          <p>I usually like to express my opinions via blogs. I am not famous blogger but It is helpfult to idintify the more technology and related enviroment things. Medium is my blog post platform</p>
         </div>
 
         <div class="row">
@@ -655,7 +655,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Mahabaga, Ragama</p>
+                <p>Mahabaga, Ragama, Sri Lanka</p>
               </div>
 
               <div class="email">
